# mfdp

./: Dockerfile  README.md  app.py  index.html  mfdp.code-workspace  mkdocs.yml  pylint.rc  pyproject.toml  requirements.txt  sitemap.xml
api/: index.html
docs/: api.md  index.md
research/: Untitled.ipynb  notebook.css
research/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
search/: search_index.json
site/: 404.html  index.html  objects.inv  search.html  sitemap.xml
site/api/: index.html
site/search/: search_index.json
src/: __init__.py  backend.py  baseline.py  load_data.py  recomend.py  utils.py  validation.py
