[tool.poetry]
name = "mfdp"
version = "0.1.0"
description = ""
authors = ["da-kartushov <kartyshov.d@team.karpov.courses>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
importlib-metadata = "^6.0.0"
black = "^23.1.0"
typing-extensions = "^4.5.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.1.1"
pre-commit = "^3.1.1"
mkdocstrings = "^0.20.0"
pylint = "^2.17.0"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
importlib-resources = "^5.12.0"
pandas = "^1.5.3"
numpy = "^1.24.2"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
